# cell_cycle_project

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  run.sh
.cache/clangd/index/: applicationClass.cpp.A1893D1A6EC5156C.idx  applicationClass.hpp.7D24E7C5889F4312.idx  cellClass.cpp.11B616CB47821CC1.idx  cellClass.hpp.3245EFB2F371BD11.idx  context.c.393ADB2C2BB081E9.idx  egl_context.c.28484EE73225DFB5.idx  glad.c.0B3D34DFD9404C9A.idx  glad.h.497AD555A7AED91D.idx  glad.h.5D5875FADA87BB0E.idx  glfw3.h.1A219E87777E2404.idx  glfw3.h.25FBE7B127BFA4AC.idx  glfw3native.h.DFE8DAAE5EBDA6B5.idx  glx_context.c.540D32291E7E0803.idx  init.c.B0E0647D2E9EB5C6.idx  input.c.7DDF0BCB4E46A8F3.idx  internal.h.3C81030F7512AE22.idx  linux_joystick.c.FFBFA6E9CE03150C.idx  linux_joystick.h.4F062FBF95A2AEB5.idx  main.cpp.26B55E3510D704C9.idx  mappings.h.C4970564E2AB790B.idx  monitor.c.BB30AE4E02305F3A.idx  null_init.c.7F0DA39E82C3EFDC.idx  null_joystick.c.CB94B2D56977C21D.idx  null_joystick.h.B242EB967F16E87D.idx  null_monitor.c.FAE96FE6FBDA76C3.idx  null_platform.h.7787BF87D0BECB8B.idx  null_window.c.DC47DD22FD2A0A23.idx  openGLdebug.hpp.6759AB92CD6514F1.idx  osmesa_context.c.986165D204F60862.idx  platform.c.4A2CAFD4149AB8E9.idx  platform.h.D7E424CEFBCAA0E5.idx  posix_module.c.CBABE07B16103BC3.idx  (+21 more)
include/glad/: glad.h
src/: applicationClass.cpp  cellClass.cpp  example.cpp  main.cpp  shaderClass.cpp  srcDir.hpp  stb.cpp
src/headers/: applicationClass.hpp  cellClass.hpp  example.hpp  openGLdebug.hpp  shaderClass.hpp  timerClass.hpp
src/shaders/: cell.frag.glsl  cell.vert.glsl
